fix: startup error by script